--- a/weather-app-react/src/components/Authstyles.css
+++ b/weather-app-react/src/components/Authstyles.css
@@ -3,7 +3,7 @@
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background: linear-gradient(to bottom, #87ceeb, #1e90ff);
+    background: linear-gradient(to bottom, #93eb87, #d37b08);
     padding: 20px;
   }
   
